Alterações em carreiras e inclusão da página de newsletter, conforme solicitação da carol

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -19,29 +19,33 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvendor Android Jr.</h2>
+				        <h6>Enviar currículos para <a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvendor Android Jr.">recrutamentosp@concretesolutions.com.br</a></h6>
 				        <a class="btn-master" onclick= "document.getElementById('sp-vaga-1').style.display = 'block';">saiba mais</a>
-						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+						<a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvendor Android Jr." class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 				<div class="col-md-3">
 			    	<div class="jumbotron">
 						<h2>Desenvolvedor Android Pleno</h2>
+						<h6>Enviar currículos para <a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvendor Android Pleno">recrutamentosp@concretesolutions.com.br</a></h6>
 						<a class="btn-master" onclick= "document.getElementById('sp-vaga-2').style.display = 'block';">saiba mais</a>
-						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+						<a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvedor Android Pleno" class="btn-master">candidatar-se</a>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="jumbotron">
 						<h2>Desenvolvedor Android Sênior</h2>
+						<h6>Enviar currículos para <a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvendor Android Sênior">recrutamentosp@concretesolutions.com.br</a></h6>
 						<a class="btn-master" onclick= "document.getElementById('sp-vaga-3').style.display = 'block';">saiba mais</a>
-						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+						<a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvendor Android Sênior" class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 			    <div class="col-md-3">			       
 					<div class="jumbotron">
 					    <h2>Desenvolvedor Ruby</h2>
+					    <h6>Enviar currículos para <a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvedor Ruby">recrutamentosp@concretesolutions.com.br</a></h6>
 					    <a class=" btn-master" onclick= "document.getElementById('sp-vaga-4').style.display = 'block';">saiba mais</a>
-					    <a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+					    <a href="mailto:recrutamentosp@concretesolutions.com.br?subject=Desenvolvedor Ruby" class="btn-master">candidatar-se</a>
 				    </div>	
 				</div>			       
 			</div>
@@ -50,6 +54,7 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvendor Android Jr.</h2>
+				        <h6>Enviar currículos para <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvendor Android Jr.">recrutamentorj@concretesolutions.com.br</a></h6>
 				        <a class="btn-master" onclick= "document.getElementById('sp-vaga-1').style.display = 'block';">saiba mais</a>
 						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
@@ -57,38 +62,52 @@ title: Carreira
 				<div class="col-md-3">
 			    	<div class="jumbotron">
 						<h2>Desenvolvedor Android Pleno</h2>
+						<h6>Enviar currículos para <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvendor Android Pleno.">recrutamentorj@concretesolutions.com.br</a></h6>
 						<a class="btn-master" onclick= "document.getElementById('sp-vaga-2').style.display = 'block';">saiba mais</a>
-						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+						<a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvendor Android Pleno" class="btn-master">candidatar-se</a>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="jumbotron">
 						<h2>Desenvolvedor Android Sênior</h2>
+						<h6>Enviar currículos para <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvendor Android Sênior.">recrutamentorj@concretesolutions.com.br</a></h6>
 						<a class="btn-master" onclick= "document.getElementById('sp-vaga-3').style.display = 'block';">saiba mais</a>
-						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+						<a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvendor Android Sênior" class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Programador Java Sênior</h2>
+				        <h6>Enviar currículos para <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvendor Java Sênior">recrutamentorj@concretesolutions.com.br</a></h6>
 				        <a class=" btn-master" onclick= "document.getElementById('rj-vaga-1').style.display = 'block';">saiba mais</a>
-				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Programador Java Sênior" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			    <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2 style="font-size: 18px;">Programador PHP Sr. - Magento</h2>
+				        <h6>Enviar currículos para <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Programador PHP Sr. - Magento">recrutamentorj@concretesolutions.com.br</a></h6>
 				        <a class=" btn-master"onclick= "document.getElementById('rj-vaga-2').style.display = 'block';">saiba mais</a>
-				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Programador PHP Sr. - Magento" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			    <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvedor Web</h2>
+				        <h6>Enviar currículos para <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvedor Web">recrutamentorj@concretesolutions.com.br</a></h6>
 				        <a class=" btn-master" onclick= "document.getElementById('rj-vaga-3').style.display = 'block';">saiba mais</a>
-				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvedor Web" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
+			     <div class="col-md-3">
+					<div class="jumbotron">
+				        <h2>Desenvolvedor iOS Sênior</h2>
+				        <h6>Enviar currículos para <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvedor iOS Sênior">recrutamentorj@concretesolutions.com.br</a></h6>
+				        <a class=" btn-master" onclick= "document.getElementById('rj-vaga-4').style.display = 'block';">saiba mais</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br?subject=Desenvolvedor iOS Sênior" class="btn-master">candidatar-se</a>
+				    </div>
+			    </div>
+			    
 			</div>
 			<div class="row">
 				<h2 class="secondary-title"><span class="purple">//</span> CloudRetail<h2>
@@ -101,24 +120,27 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>DBA/AD</h2>
+				        <h6>Enviar currículos para <a href="mailto:rh@fixsupport.com.br?subject=DBA/AD">recrutamentorj@concretesolutions.com.br</a></h6>
 				        <a class="btn-master"onclick= "document.getElementById('fix-vaga-1').style.display = 'block';">saiba mais</a>
 				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			    
-			    <div class="col-md-4">
+			    <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Suporte Publicação</h2>
+				        <h6>Enviar currículos para <a href="mailto:rh@fixsupport.com.br?subject=Suporte Publicação">recrutamentorj@concretesolutions.com.br</a></h6>
 				         <a class="btn-master" onclick= "document.getElementById('fix-vaga-3').style.display = 'block';">saiba mais</a>
-				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
+				        <a href="mailto:rh@fixsupport.com.br?subject=Suporte Publicação" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 
-			     <div class="col-md-4">
+			     <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvedor Web</h2>
-				         <a class="btn-master" onclick= "document.getElementById('fix-vaga-4').style.display = 'block';">saiba mais</a>
-				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
+				        <h6>Enviar currículos para <a href="mailto:rh@fixsupport.com.br?subject=Desenvolvedor Web">recrutamentorj@concretesolutions.com.br</a></h6>
+				        <a class="btn-master" onclick= "document.getElementById('fix-vaga-4').style.display = 'block';">saiba mais</a>
+				        <a href="mailto:rh@fixsupport.com.br?subject=Desenvolvedor Web" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			</div>
@@ -222,7 +244,6 @@ title: Carreira
 						<li> Familiaridade com o Eclipse</li>
 						<li> Familiaridade com componentes de User Interface do Android</li>
 						<li> Adaptação de layouts para diferentes tamanhos de telas e dispositivos</li>
-						<li></li>
 						<li> Conhecimento das guidelines de design do Google Play e de desenvolvimento</li>
 						<li> Conhecimento de metodologias ágeis ( Scrum e XP )</li>
 						<li> Fluência em inglês ( leitura técnica )</li>
@@ -337,7 +358,7 @@ title: Carreira
 		        	<ul>			   
 						<li>Buscamos um Programador com sólidos conhecimentos em PHP e Magento Commerce. </li>
 						<li>Saber JQuery é um grande diferencial.</li>
-					<ul>
+					</ul>
 					<h4>O que oferecemos:</h4>
 					<ul>
 						<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
@@ -385,6 +406,58 @@ title: Carreira
 			  </div>
 			</div>
 			
+			<div class="modal" id="rj-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			  <div class="modal-dialog">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" onclick= "document.getElementById('rj-vaga-3').style.display = 'none';">&times;</button>
+			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor iOS Sênior</h2>
+			      </div>
+			      <div class="modal-body">
+					<h4>O que esperamos do candidato:</h4>
+		        	<ul>
+		        		<p>Requisitos:</p>			   
+						<li>Controle de versão distribuído (git e/ou hg)</li>
+						<li>Cocoapods para gerenciamento de dependências do projeto</li>
+						<li>Sólido conhecimento em Objc, orientação a objeto e design patterns</li>
+						<li>Integração com APIs RESTful e/ou Webservices</li>
+						<li>Familiaridade com o Xcode</li>
+						<li>Familiaridade com componentes de User Interface do iOS</li>
+						<li>Familiaridade com storyboards, xibs, autolayout</li>
+						<li>Adaptação de layouts entre iPhone/iPad</li>
+						<li>Conhecimento das guidelines de design e de desenvolvimento da Apple</li> 
+						<li>Conhecimento de metodologias ágeis (Scrum e XP)</li>
+						<li>Fluência em inglês (leitura técnica)</li>
+					</ul>
+					<ul>
+						<p>Extra:</p>
+						<li>Portfólio de aplicativos na Appstore</li>
+						<li>Familiaridade com Testes no Xcod</li>
+						<li>Integração contínua com Jenkins ou Bots</li>
+						<li>Familiaridade com xcodebuild para construção de scripts</li>
+						<li>Familiaridade com processo de subida da Applestore</li>
+						<li>Familiaridade com provisionings profiles da Apple</li>
+						<li>Familiaridade com frameworks: AFNetworking, Mantle, Specta, Expecta</li>
+					</ul>
+
+					<h4>O que oferecemos:</h4>
+					<ul>
+						<li>Ajuda de custo para pessoas que não sejam da cidade.</li>
+						<li>Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
+						<li>Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
+						<li>Valorização das pessoas e não de processos.</li>
+						<li>Salário compatível com o mercado.</li>
+					</ul>
+					<h5>Salários para recrutamentorj@concretesolutions.com.br</h5>
+				  </div>
+			      <div class="modal-footer">
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('rj-vaga-4').style.display = 'none';">fechar</a>
+			       	<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+
 			<div class="modal" id="fix-vaga-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
