Novas vagas e nova matéria no news

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@ is_index: true
 			<div class="row">
 			    <div class="col-md-6">
 			    	<header>
-						<h2 class="title-news">Marco Civil da Internet</h2>
-						<h6 class="author-news">Por: Maurício Duarte - Revista Administrador Profissional (CRA-SP)</h6>
+						<h2 class="title-news">10 inovações que mudaram o mercado nos últimos anos</h2>
+						<h6 class="author-news">Por: Priscila Zuini - Exame.com</h6>
 					</header>
-					<p>Marco Civil da Internet - Saiba como a nov alei que estabelece direitos e deveres na rede afeta usuários e empresas. Entrevista com Fernando de la Riva.</p>
-					<a href="http://www.crasp.gov.br/crasp/rap/?edicao=8914&pagina=1" target="_blank" class="btn-master">ler mais</a>
+					<p>Startups de tecnologia têm o poder de alterar completamente a dinâmica de negócio em um segmento pré-existente. Fernando de la Riva lista para a Exame.com algumas dessas companhias, que revolucionaram o mercado nos últimos anos.</p>
+					<a href="http://exame.abril.com.br/pme/noticias/10-inovacoes-que-mudaram-o-mercado-nos-ultimos-anos" target="_blank" class="btn-master">ler mais</a>
 				</div>
 				<div class="col-md-6">
-					<a href="http://exame.abril.com.br/pme/noticias/o-que-todo-empreendedor-digital-deve-ler" target="_blank"><img alt="News" class="align-right" src="img/img-mobile.jpg"></a>
+					<a href="http://exame.abril.com.br/pme/noticias/10-inovacoes-que-mudaram-o-mercado-nos-ultimos-anos" target="_blank"><img alt="News" class="align-right" src="img/10-inovacoes.jpg"></a>
 			    </div>
 			</div>
 		</div>
