--- a/carreira/index.html
+++ b/carreira/index.html
@@ -14,12 +14,12 @@ title: Carreira
 			<header><h1 class="title">Carreira</h1></header>
 			<p class="text-carreira">Nossas equipes são ágeis, autogerenciadas e auto-organizadas, ou seja, os próprios membros elegem quem será o responsável por determinada tarefa e cobram a realização dela. Também adoramos compartilhar conhecimento e colocamos todas as nossas ideias no nosso Blog. Procuramos relações duradouras e investimos em boas ideias.</p>
 			<h3 class="bold">O que oferecemos</h3>
-			<ul>
-				<li>- Ajuda de custo para pessoas que não sejam da cidade e que queiram vir trabalhar conosco. </li>
-				<li>- Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
-				<li>- Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
-				<li>- Valorização das pessoas e não de processos.</li>
-				<li>- Salário compatível com o mercado.</li>
+			<ul class="list">
+				<li>Ajuda de custo para pessoas que não sejam da cidade e que queiram vir trabalhar conosco. </li>
+				<li>Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
+				<li>Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
+				<li>Valorização das pessoas e não de processos.</li>
+				<li>Salário compatível com o mercado.</li>
 			</ul>
 
 			<div class="row">
@@ -368,7 +368,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" onclick= "document.getElementById('rj-vaga-4').style.display = 'none';">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('rj-vaga-1').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor .NET</h2>
 			      </div>
 			      <div class="modal-body">
