Novas alterações home e carreira

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -14,24 +14,31 @@ is_carreiras: true
 	<div class="container">
 		<header><h1 class="title">Carreira</h1></header>
 		<p class="text-carreira">Nossas equipes são ágeis, autogerenciadas e auto-organizadas, ou seja, os próprios membros elegem quem será o responsável por determinada tarefa e cobram a realização dela. Também adoramos compartilhar conhecimento e colocamos todas as nossas ideias no nosso Blog. Procuramos relações duradouras e investimos em boas ideias.</p>
-			<h3 class="bold">O que oferecemos</h3>
-			<div id="beneficios">
-				<ul class="list">
-					<li>Ajuda de custo para pessoas que não sejam da cidade e que queiram vir trabalhar conosco. </li>
-					<li>Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
-					<li>Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
-					<li>Valorização das pessoas e não de processos.</li>
-					<li>Salário compatível com o mercado.</li>
-				</ul>
-			</div>
+		<h3 class="bold">O que oferecemos</h3>
+		<div id="beneficios">
+			<ul class="list">
+				<li>Ajuda de custo para pessoas que não sejam da cidade e que queiram vir trabalhar conosco. </li>
+				<li>Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
+				<li>Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
+				<li>Valorização das pessoas e não de processos.</li>
+				<li>Salário compatível com o mercado.</li>
+			</ul>
+		</div>
+
 		<div class="row">
 			<h2 class="secondary-title"><span class="purple">//</span> São Paulo</h2>
+
+			<div id="seletiva">
+				<img src="/img/selecao-concrete-androi-ios.jpg">
+			</div>
+
 			<div class="col-md-12">
 				<h4>Enviar currículos para <a id="mail-sp" href="mailto:recrutamentosp@concretesolutions.com.br">recrutamentosp@concretesolutions.com.br</a></h4>
 				<br>
 			</div>
 			<div id="vagas-cssp"></div>		       
 		</div>
+
 		<div class="row">
 			<h2 class="secondary-title"><span class="purple">//</span> Rio de Janeiro</h2>
 			<div class="col-md-12">
