Novas alterações em carreiras.

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -9,7 +9,7 @@ is_carreiras: true
 			<h1>Vem trabalhar com a gente!</h1>
 		</div>
 	</div>
-</section>
+</section>	
 <section id="jobs" class="box">
 	<div class="container">
 		<header><h1 class="title">Carreira</h1></header>
@@ -27,9 +27,24 @@ is_carreiras: true
 
 		<div class="row">
 			<h2 class="secondary-title"><span class="purple">//</span> São Paulo</h2>
-
-			<div id="seletiva">
-				<img src="/img/selecao-concrete-androi-ios.jpg">
+			
+			<div id="seletiva" class="seletiva-concrete">
+				<div class=title-seletiva>
+					<p>Alguém aí é de Belém/PA e quer vir trabalhar em São Paulo? =)</p>
+					<p>Faremos uma seletiva de desenvolvedores Android e iOS na primeira semana de agosto. </p>
+					<p>Para participar, é só seguir as instruções que estão nos repositórios abaixo:</p>
+				</div>
+				<div class="box-repositorio">
+					<b>Para iOS:</b></br>
+					<a href="https://bitbucket.org/thiago_lioy/desafio-ios" target="_blank">https://bitbucket.org/thiago_lioy/desafio-ios</a></br>
+					<b>Para Android:</b></br>
+					<a href="https://bitbucket.org/cs_victor_nascimento/desafio-android/" target="_blank">https://bitbucket.org/cs_victor_nascimento/desafio-android/</a>
+				</div>
+				<div class="descricao-seletiva">
+					<p>Vamos analisar os códigos e os melhores passam para a segunda fase do projeto, que será uma entrevista via Skype/Hangout,  em data a ser definida.
+					Para quem quiser saber mais sobre nós, nosso  arquiteto de soluções Olavo Castro estará em Belém durante o Papo Safo, no dia 8/8, às 19h, para  apresentar a palestra “Times mobile: uma trajetória de aprendizado” e contar um pouco mais sobre a empresa e como trabalhamos.</p>
+					<p>Vem trabalhar com a gente!</p>
+				</div>
 			</div>
 
 			<div class="col-md-12">
