Inclusão da seção de mobile

--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@ is_index: true
 	</section>
 	<section id="news" class="box">
 		<div class="container">
-			<center>
-				<a href="http://www.ecommercebrasil.com.br/premio-e-commerce-brasil-2014/"><img src="img/bg-premio.png" alt="Prêmio commerce Brasil!"></a>
-			</center>
-			<!-- <header>
+			<header>
 				<h1 class="title"> Últimas Notícias</h1>
 			</header>
 			<div class="row">
@@ -103,6 +100,6 @@ is_index: true
 				<div class="col-md-6">
 					<a href="http://exame.abril.com.br/pme/noticias/10-inovacoes-que-mudaram-o-mercado-nos-ultimos-anos" target="_blank"><img alt="News" class="align-right" src="img/10-inovacoes.jpg"></a>
 			    </div>
-			</div> -->
+			</div>
 		</div>
 	</section>
