--- a/o-que-fazemos/index.html
+++ b/o-que-fazemos/index.html
@@ -54,30 +54,8 @@ title: O que fazemos
 				<h2 class="title-service"><span class="purple">//</span> Mobile</h2>
 				<img src="/img/mobile.png" alt="Mobile" class="img-responsive img-service">
 				<div class="center">
-					<a href="mailto:comercial@concretesolutions.com.br" class="btn-lg btn-master text-button">fale conosco</a>
+					<a href="/mobile" class="btn-lg btn-master text-button">saiba mais</a>
 				</div>
-				<div id="services" class="row">
-					<div class="box-service border-right col-md-3">
-						<div class="row center"><img src="/img/multicanal.png"></div>
-						<h3>Muticanal</h3>
-						<p>Nossa estratégia é multicanal: trabalhamos com aplicações nativas em iOS e Android, web mobile e híbridas, envolvendo mobile commerce, autosserviço móvel e conteúdo.</p>
-					</div>
-					<div class="box-service col-md-3">
-						<div class="row center"><img src="/img/personalizacao.png"></div>
-						<h3>Customização</h3>
-						<p>Desenvolvemos soluções para alcançar o maior público possível sem perder funcionalidades e utilizamos a tecnologia mais adequada para cada tipo de problema.</p>
-					</div>
-					<div class="box-service col-md-3">
-						<div class="row center"><img src="/img/tecnologias.png"></div>
-						<h3>Tecnologias</h3>
-						<p>Combinamos código nativo com HTML 5 e jQuery Mobile.</p>
-					</div>
-					<div class="box-service col-md-3 no-border">
-						<div class="row center"><img src="/img/experiencia.png"></div>
-						<h3>Experiência</h3>
-						<p>Desde 2005, implementamos mais de 50 projetos em 10 países.</p>
-					</div>
-				</div>	
 			</div>
 		</section>
 		<section id="cloud-service" class="box">
