alterações solicitadas pela Carol

--- a/mobile/descobrir.html
+++ b/mobile/descobrir.html
@@ -36,7 +36,7 @@
             </div>  
           </div>
           <div class="view col-md-3 item-2">
-            <h3>Desenvolvimento</br> de produtos Lean</h3>
+            <h3 class="white">Desenvolvimento</br> de produtos Lean</h3>
             <div class="mask color3">  
               <div class="content-default">
                 <p class="text2">Chegamos ao produto mínimo viável por meio de protótipos quase diários de alta fidelidade, validando continuamente nossas hipótesese de negócio.</p>
