--- a/mobile/gerenciar.html
+++ b/mobile/gerenciar.html
@@ -27,8 +27,10 @@
         <h3>Centro de Excelência Mobile (CEM)</h3>
         <div class="mask color2">  
           <div class="content-default">
-            <p class="text2">- Formado por seis papéis que desempenham oito práticas validadas pelo Vale do Silício; </br>
-              - Implantação de Open Mobile Development Platform</p>
+            <p class="text2">
+              - Time de garantia de qualidade, que executa ciclos de análise, diagnóstico e implantação de melhores práticas. <br /> 
+              - Formado por sete papéis que desempenham nove práticas validadas pelo Vale do Silício. <br /> 
+              - Implantação da Plataforma Mobilefirst.</p>
           </div>
         </div>  
       </div>
