removendo estilo não utilizados e acertando ordenação dos LIs

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -28,15 +28,15 @@ is_index: true
   </div>
 </section>
 <section id="how-we-do">
-  <header class="secondary-menu">
-  </header>
+  <div class="divisoria"></div>
   <div class="container">
     <div id="menu">
-      <ul id="scrollingMenu" class="navbar-link">
-        <span class="text-title">Nossas Técnicas</span>
-        <li><a related-div="#banner-desenvolver" href="desenvolver.html" class="JS-scrollMenu">Desenvolver</a></li>
-        <li class="active"><a related-div="#banner-gerenciar" href="gerenciar.html" class="JS-scrollMenu">Gerenciar</a></li>
+      <span class="text-title">Nossas Técnicas</span>
+      <ul id="scrollingMenu">
         <li><a related-div="#banner-descobrir" href="descobrir.html" class="JS-scrollMenu">Descobrir</a></li>
+        <li class="active"><a related-div="#banner-gerenciar" href="gerenciar.html" class="JS-scrollMenu">Gerenciar</a></li>
+        <li><a related-div="#banner-desenvolver" href="desenvolver.html" class="JS-scrollMenu">Desenvolver</a></li>
+        
       </ul>
     </div>
     <div class="banner-master JS-banner" id="banner-descobrir" style="display: block">
