tweaks no CSS e ordem dos LIs

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -34,8 +34,9 @@ is_index: true
       <span class="text-title">Nossas Técnicas</span>
       <ul id="scrollingMenu">
         <li><a related-div="#banner-descobrir" href="descobrir.html" class="JS-scrollMenu">Descobrir</a></li>
-        <li class="active"><a related-div="#banner-gerenciar" href="gerenciar.html" class="JS-scrollMenu">Gerenciar</a></li>
-        <li><a related-div="#banner-desenvolver" href="desenvolver.html" class="JS-scrollMenu">Desenvolver</a></li>
+        <li class="active"><a related-div="#banner-desenvolver" href="desenvolver.html" class="JS-scrollMenu">Desenvolver</a></li>
+        <li><a related-div="#banner-gerenciar" href="gerenciar.html" class="JS-scrollMenu">Gerenciar</a></li>
+        
         
       </ul>
     </div>
