removendo arquivo desnecessário e fix JS.

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -41,11 +41,47 @@ is_index: true
           </p>
       </div>
     </div>
-  
-  
     <div id="conteudo">
-
-
+      <section id="descobrir">      
+        <div class="row">
+        <div class="view col-md-4 item-3">
+            <h3>Melhores Práticas</h3>
+            <div class="mask color2">  
+                <p class="text2">Juntamos suas ferramentas com uso de ​arquitetura ​orientada a ​serviços, que dá ​robustez​ às diversas​ transações do seu negócio.</p>
+            </div>  
+          </div>
+          <div class="view col-md-4 item-5">
+            <h3>Sustentação</h3>
+            <div class="mask color2">  
+                <p class="text2">Gerenciamento ágil de demandas e disposição para ambientes críticos.</p>
+            </div>
+          </div>
+          <div class="view col-md-4 item-3">
+            <h3>Escalabilidade e</br> segurança</h3>
+            <div class="mask color2">  
+                <p class="text2">Não importa a sua demanda, montamos toda sua infraestrutura em nuvem AWS, o que proporciona suporte à demanda sazonal e alta performance.​</p>
+            </div>  
+          </div>
+          <div class="view col-md-4 item-4">
+            <h3>Sucesso baseado em</br> Métricas</h3>
+            <div class="mask color2">  
+                <p class="text2">Usamos técnicas de webmarketing, como Google Adwords, SEO, Google Analytics, Testes A/B, etc.</p>
+            </div>  
+          </div>
+          <div class="view col-md-4 item-2">
+            <h3 class="white">Não importa a</br>tecnologia</h3>
+            <div class="mask color2 ">  
+                <p class="text2">Fazemos projetos de implantação de comércio eletrônico usando a tecnologia que for melhor pra você, seja PHP, Java, .NET, Python ou Ruby.</p>
+            </div>  
+          </div>
+          <div class="view col-md-4 item-5">
+            <h3>De acordo com sua</br> necessidade</h3>
+            <div class="mask color2">  
+                <p class="text2">Ajudamos a identificar e implantar a melhor ferramenta e modelo para ​varejistas iniciantes ou consolidados no mercado.</p> 
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
 </section>
@@ -56,14 +92,13 @@ is_index: true
     </div>
   </header>
   <div class="depoimento">
-    <div class="container JS-depoimentoTexto" id="divMontacasa" style="display:block;">
-      <p>“Aprendemos a entender o comportamento do consumidor e a não construir nada que você não tenha ideia se vai ser útil, não gastar para construir antes de testar, testar com o mínimo possível, etc. Tiramos grandes lições desta parceria, além é claro, de ganhar em dinamismo. Na primeira semana já sentimos mudanças internas e mais facilidade nas tomadas de decisão.”</p>
-      <p class="autor">Caroline Dias, CEO do Montacasa</p>
-    </div>
-
-    <div class="container JS-depoimentoTexto" id="divDafiti" style="display:none;">
+    <div class="container JS-depoimentoTexto" id="divDafiti" style="display:block;">
       <p>“A Concrete Solutions teve que compreender o cenário em que estávamos e enfrentar um nível de exigência muito alto dos sócios. Adotamos, então, um modelo de discussões frequentes de usabilidade, técnica e prioridades, envolvendo toda a equipe de TI e marketing. Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”.</p>
       <p class="autor">Roberto Heingst, gerente de TI da Dafiti.</p>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divMontacasa" style="display:none;">
+      <p>“Aprendemos a entender o comportamento do consumidor e a não construir nada que você não tenha ideia se vai ser útil, não gastar para construir antes de testar, testar com o mínimo possível, etc. Tiramos grandes lições desta parceria, além é claro, de ganhar em dinamismo. Na primeira semana já sentimos mudanças internas e mais facilidade nas tomadas de decisão.”</p>
+      <p class="autor">Caroline Dias, CEO do Montacasa</p>
     </div>
     <div class="container JS-depoimentoTexto" id="divTricae" style="display:none;">
       <p>“Quando percebemos uma tendência de aumento das visitas no nosso site via celular, entendemos que era preciso fazer um aplicativo para otimizar a experiência do usuário e gerar mais leads. Conhecemos a Concrete Solutions em abril, fechamos negócio em maio e em agosto lançamos nossos aplicativos para Android e iOS. Acredito que a expertise do time, que é bastante sólido e conhece bem o negócio de e-commerce, gerou uma grande agilidade, que foi essencial para o projeto. Recomendo.”</p>
