Mudança de banner e tamanho das marcas dos clientes

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -8,8 +8,8 @@ is_index: true
   <div class="container">
     <div class="hero-content">
       <h1 class="text1">Construa seu e-commerce </br>com quem entende.</h1>
-      <h5 class="text2">Somos a empresa que mais entregou projetos de comércio eletrônico e mobile commerce </br>no Brasil.
-      Usamos nuvem, desenvolvimento ágil e integrações ​robustas para ajudar a </br>vender o seu negócio do jeito certo. </h5>
+      <h5 class="text2">Somos a empresa que mais entregou projetos de comércio</br>eletrônico e mobile commerce no Brasil.
+      
       <div class="newsletter">
         <form action="//concretesolutions.us5.list-manage.com/subscribe/post?u=0dd8265cc74731cec0c149863&amp;id=68c6a69e52" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline validate" target="_blank" novalidate>
           <div class="form-group mc-field-group">
@@ -109,10 +109,10 @@ is_index: true
     <div class="fixed-bar">
       <!-- Elastislide Carousel -->
       <ul id="carousel" class="elastislide-list">
-        <li><a><img src="/img/case_logo_americanas.png" alt="Lojas Americanas" /></a></li>
+        <li class="client"><a><img src="/img/case_logo_americanas.png" alt="Lojas Americanas" /></a></li>
         <li><a related-div="#divDafiti" class="JS-depoimento"><img src="/img/dafiti-logo.png" alt="Dafiti" /></a></li>
         <li><a><img src="/img/case_logo_casaevideo.png" alt="Casa e Vídeo" /></a></li>
-        <li><a><img src="/img/case_logo_osklen.png" alt="Osklen" /></a></li>
+        <li><a><img src="/img/case_logo_osklen.png" alt="Osklen" /></a></li></br></br>
         <li><a related-div="#divMontacasa" class="JS-depoimento"><img src="/img/montacasa-logo.png" alt="Montacasa" /></a></li>  
         <li><a related-div="#divTricae" class="JS-depoimento"><img src="/img/tricae-logo.png" alt="Tricae" /></a></li>
         <li><a><img src="/img/kanui-logo.png" alt="Kanui" /></a></li>
